--- a/plugin/src/styles.css
+++ b/plugin/src/styles.css
@@ -1,12 +1,4 @@
-/*
-
-This CSS file will be included with your plugin, and
-available in the app when your plugin is enabled.
-
-If your plugin does not need CSS, delete this file.
-
-*/
-
-main {
-    background-color: brown;
+.sync-settings-access-token textarea {
+    width: 100%;
+    height: 100px;
 }
