--- a/plugin/src/styles.scss
+++ b/plugin/src/styles.scss
@@ -86,8 +86,10 @@
 }
 
 .logs-view {
+	display: flex;
+	flex-direction: column;
+
 	.logs-container {
-		max-height: 100%;
 		max-width: 100%;
 		overflow-y: auto;
 
